# Backend-Code-Syntax-Server

./: .gitignore  Dockerfile  README.md  app.py  edupi_assist.json  main.py  pyproject.toml  routes.py  settings.py  syntax_checker.py
.github/workflows/: cicd-dev.yml
app/: app.py  main.py
app/_config/: settings.py
app/api/: check.py
app/api/services/: syntax_checker.py
app/config/: restricted_python_config.py
app/exception/: base_custom_exception.py  custom_error.py  exception_handlers.py  invalid_exception.py
app/models/: error_code.py  error_response.py  success_reponse.py
app/route/: advice_router.py  check.py  correct.py  syntax_router.py  visualize_router.py
app/route/advice/: advice_router.py  ai_service.py  router.py
app/route/advice/exception/: openai_exception.py
app/route/exception/: base_custom_exception.py  invalid_exception.py
app/route/execute/: analsys_service.py  execute_router.py  router.py
app/route/models/: code_request.py  correct_request.py  correct_response.py  error_response.py  hint_request.py  hint_response.py  success_reponse.py
app/route/services/: ai_service.py  analsys_service.py  syntax_service.py
app/route/visualize/: syntax_service.py  visualize_router.py
app/services/: syntax_checker.py
app/utils/: logger.py
app/web/: exception_handlers.py  logger.py
app/web/exception/: base_exception.py  invalid_exception.py  task_fail_exception.py
app/web/models/: error_response.py  success_reponse.py
services/: request_code.py
tests/route/execute/: test_execute_service.py
tests/route/services/: test_syntax_service.py
(+29 files in other folders)
