[tool.poetry]
name = "coding-assist-server"
version = "0.1.0"
description = ""
authors = ["UJeans <jean207@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
black = "^24.8.0"
flake8 = "^7.1.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pytest-mock = "^3.14.0"
openai = "^1.50.2"
restrictedpython = "^7.3"
aiofiles = "^24.1.0"

[tool.black]
line-length = 120

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
